--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             </div>
           </div>
         </section>
+        <!-- Serviços -->
         <section class="services" id="services">
           <div class="titleSection">
             <h3>Serviços</h3>
@@ -309,7 +310,7 @@
                 <img src="img/higienizacao-de-carpetes.png" alt="">
               </div>
               <div class="card--title">
-                <h4>"<strong>Higienização</strong> Especializada de Carpetes</h4>
+                <h4><strong>Higienização</strong> Especializada de Carpetes</h4>
               </div>
               <div class="card--text">
                 <p>Remova Manchas e Impurezas: Deixe Seu Ambiente Mais Saudável e Confortável</p>
@@ -348,6 +349,136 @@
                 <button>Orçamento</button>
                 <span><i class="fa-solid fa-arrow-right"></i></span>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Testemunhas -->
+        <section class="testemunhas">
+          <div class="titleSection">
+            <h3>Clientes</h3>
+          </div>
+          <div class="testemunhas--subtitle">
+            <h2>O que Nossos Clientes Dizem</h2>
+          </div>
+          <div class="slider--container">
+            <div class="slides--cards">
+              <!-- input radio -->
+              <input type="radio" name="radio-btn" id="radio1">
+              <input type="radio" name="radio-btn" id="radio2">
+              <input type="radio" name="radio-btn" id="radio3">
+              <input type="radio" name="radio-btn" id="radio4">
+             <!-- Fim radio -->
+              <div class="slide--card-item">
+                <div class="slide-card-img">
+                  <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
+                </div>
+                <div class="slide-card-tite">
+                  <h3>Kassio Kennedy</h3>
+                  <p>Seguidor 1</p>
+                  <div class="card-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="slide-card-text">
+                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
+                </div>
+              </div>
+              <div class="slide--card-item">
+                <div class="slide-card-img">
+                  <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
+                </div>
+                <div class="slide-card-tite">
+                  <h3>Kassio Kennedy</h3>
+                  <p>Seguidor 2</p>
+                  <div class="card-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="slide-card-text">
+                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
+                </div>
+              </div>
+              <div class="slide--card-item">
+                <div class="slide-card-img">
+                  <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
+                </div>
+                <div class="slide-card-tite">
+                  <h3>Kassio Kennedy</h3>
+                  <p>Seguidor 3</p>
+                  <div class="card-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="slide-card-text">
+                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
+                </div>
+              </div>
+              <div class="slide--card-item">
+                <div class="slide-card-img">
+                  <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
+                </div>
+                <div class="slide-card-tite">
+                  <h3>Kassio Kennedy</h3>
+                  <p>Seguidor 4</p>
+                  <div class="card-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="slide-card-text">
+                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
+                </div>
+              </div>
+              <div class="slide--card-item">
+                <div class="slide-card-img">
+                  <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
+                </div>
+                <div class="slide-card-tite">
+                  <h3>Kassio Kennedy</h3>
+                  <p>Seguidor 5</p>
+                  <div class="card-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="slide-card-text">
+                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
+                </div>
+              </div>
+
+              <!--start Navgation  -->
+              <div class="navigation-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+              </div>
+              <!-- End Navigation -->
+            </div>
+            <div class="manual-navigaton">
+              <label for="radio1" class="manual-btn"></label>
+              <label for="radio2" class="manual-btn"></label>
+              <label for="radio3" class="manual-btn"></label>
+              <label for="radio4" class="manual-btn"></label>
             </div>
           </div>
         </section>
