--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               <input type="radio" name="radio-btn" id="radio3">
               <input type="radio" name="radio-btn" id="radio4">
              <!-- Fim radio -->
-              <div class="slide--card-item">
+              <div class="slide--card-item first">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -484,5 +484,8 @@
         </section>
       </div>
     </main>
+
+
+    <!-- parei no slide, -->
   </body>
 </html>
