--- a/index.html
+++ b/index.html
@@ -367,8 +367,11 @@
               <input type="radio" name="radio-btn" id="radio2">
               <input type="radio" name="radio-btn" id="radio3">
               <input type="radio" name="radio-btn" id="radio4">
+              <input type="radio" name="radio-btn" id="radio5">
              <!-- Fim radio -->
-              <div class="slide--card-item first">
+
+             <!-- Start card -->
+              <div class="slide-card-item first">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -387,7 +390,7 @@
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
                 </div>
               </div>
-              <div class="slide--card-item">
+              <div class="slide-card-item">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -406,7 +409,7 @@
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
                 </div>
               </div>
-              <div class="slide--card-item">
+              <div class="slide-card-item">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -425,7 +428,7 @@
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
                 </div>
               </div>
-              <div class="slide--card-item">
+              <div class="slide-card-item">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -444,7 +447,7 @@
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
                 </div>
               </div>
-              <div class="slide--card-item">
+              <div class="slide-card-item">
                 <div class="slide-card-img">
                   <img src="img/testimonials-2.jpg" alt="foto do perfil de quem avaliou">
                 </div>
@@ -463,6 +466,7 @@
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eum? Blanditiis voluptate possimus ducimus consectetur aspernatur! Fugit inventore repudiandae"
                 </div>
               </div>
+              <!-- End card -->
 
               <!--start Navgation  -->
               <div class="navigation-auto">
@@ -470,6 +474,7 @@
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
                 <div class="auto-btn4"></div>
+                <div class="auto-btn5"></div>
               </div>
               <!-- End Navigation -->
             </div>
@@ -478,13 +483,11 @@
               <label for="radio2" class="manual-btn"></label>
               <label for="radio3" class="manual-btn"></label>
               <label for="radio4" class="manual-btn"></label>
+              <label for="radio5" class="manual-btn"></label>
             </div>
           </div>
         </section>
       </div>
     </main>
-
-
-    <!-- parei no slide, -->
   </body>
 </html>
