--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div class="titleSection">
             <h3>Serviços</h3>
           </div>
-          <div class="subtitle--service">
+          <div class="subtitle--section">
             <h2>
               Solicite Nosso Serviço de <strong>Lavanderia</strong> e
               <strong>Higienização</strong> e Experimente a Diferença!
@@ -534,7 +534,7 @@
                   illum veniam.
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2 noneSlide">
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
@@ -556,7 +556,7 @@
                   illum veniam.
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2 noneSlide">
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
@@ -578,7 +578,7 @@
                   illum veniam.
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2 noneSlide">
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
