--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <ul>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
-                <li><a href="#">Cliente</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#testemunhas">Cliente</a></li>
+                <li><a href="#contact">Contato</a></li>
               </ul>
               <span class="copy">&copy;Ns Clean 2024</span>
             </nav>
@@ -405,7 +405,7 @@
         </section>
 
         <!-- Testemunhas -->
-        <section class="testemunhas">
+        <section class="testemunhas" id="testemunhas">
           <div class="titleSection">
             <h3>Clientes</h3>
           </div>
@@ -425,12 +425,15 @@
 
               <!-- start slide -->
               <div class="slide2 first2">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
                   <h4>Kassio Kennedy</h4>
-                  <span>Front End 1</span>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -440,19 +443,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "Fiquei muito satisfeito com o serviço da Ns Clean. Minhas roupas voltaram impecáveis, como se fossem novas. O cuidado com cada detalhe realmente faz a diferença. Com certeza, voltarei a utilizar os serviços!"
                 </div>
               </div>
               <div class="slide2">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
-                  <h4>Kassio Kennedy</h4>
-                  <span>Front End 2</span>
+                  <h4>Kayky Junior</h4>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -462,19 +465,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "A equipe da Ns Clean é super profissional. Além de entregarem tudo limpo e bem cuidado, o atendimento é sempre cordial e atencioso. Não tenho nada a reclamar, só elogios!"
                 </div>
               </div>
               <div class="slide2">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
-                  <h4>Kassio Kennedy</h4>
-                  <span>Front End 3</span>
+                  <h4>Kaio Viniw</h4>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -484,19 +487,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "O serviço de higienização da Ns Clean é excelente. Meus estofados ficaram com uma aparência renovada, e o processo todo foi muito eficiente. Recomendo para todos!"
                 </div>
               </div>
               <div class="slide2">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
-                  <h4>Kassio Kennedy</h4>
-                  <span>Front End 4</span>
+                  <h4>Kauã Felipe</h4>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -506,19 +509,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "Adorei o resultado! Minhas roupas e estofados voltaram perfeitos, sem nenhum defeito ou mancha. O serviço foi rápido e o atendimento, impecável. Muito obrigada, Ns Clean!"
                 </div>
               </div>
               <div class="slide2">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
-                  <h4>Kassio Kennedy</h4>
-                  <span>Front End 5</span>
+                  <h4>Kauany Vitoria</h4>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -528,19 +531,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "Muito satisfeito com a qualidade do serviço da Ns Clean. Eles cuidam das minhas roupas com tanta dedicação que nem parece uma lavanderia comum. Atendimento excelente!"
                 </div>
               </div>
               <div class="slide2 noneSlide">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
                   <h4>Kassio Kennedy</h4>
-                  <span>Front End 6</span>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -550,19 +553,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "A Ns Clean superou minhas expectativas com o serviço de lavanderia para o meu restaurante. As toalhas e uniformes sempre voltam impecáveis e com uma fragrância agradável."
                 </div>
               </div>
               <div class="slide2 noneSlide">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
                   <h4>Kassio Kennedy</h4>
-                  <span>Front End 7</span>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -572,19 +575,19 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "Contratei a Ns Clean para a higienização completa da minha casa, e o resultado foi excelente. A equipe foi muito profissional, usando produtos de alta qualidade e deixando cada canto da casa brilhando."
                 </div>
               </div>
               <div class="slide2 noneSlide">
+                <div class="imgGoogle">
+                  <img src="img/google (1).png" alt="">
+                </div>
                 <div class="slide-img">
                   <img src="img/testimonials-2.jpg" alt="imagem 1" />
                 </div>
                 <div class="slide-textDestaque">
                   <h4>Kassio Kennedy</h4>
-                  <span>Front End 8</span>
+                  <span>Avaliação</span>
                   <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -594,10 +597,7 @@
                   </div>
                 </div>
                 <div class="slide-text">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                  multos export minim fugiat minim velit minim dolor enim duis
-                  veniam ipsum anim magna sunt elit fore quem dolore labore
-                  illum veniam.
+                  "Fiquei impressionado com o serviço de limpeza de carpetes da Ns Clean. Meu carpete estava manchado e desgastado, mas após a higienização, ele voltou a ter uma aparência incrível."
                 </div>
               </div>
               <!-- end slide -->
@@ -617,6 +617,51 @@
               <label for="radio-3" class="manual-btn2"></label>
               <label for="radio-4" class="manual-btn2"></label>
               <label for="radio-5" class="manual-btn2"></label>
+            </div>
+          </div>
+        </section>
+
+        <section class="contact" id="contact">
+          <div class="titleSection">
+            <h3>Contato</h3>
+          </div>
+          <div class="subtitle--section">
+            <h2>Entre em Contato Conosco Para Dúvidas, Suporte ou Mais Informações</h2>
+          </div>
+          <div class="contact-conatiner">
+            <div class="col1-contact">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2562231849565!2d-44.98862382515158!3d-19.871399836485683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa7560e006d70fd%3A0x565c29c8a68c8882!2sR.%20Dimas%20Guimar%C3%A3es%2C%20792%20-%20Centro%2C%20Nova%20Serrana%20-%20MG%2C%2035520-012!5e0!3m2!1spt-BR!2sbr!4v1724785216878!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col2-contact">
+              <div class="item-contact">
+                <div><i class="fa-solid fa-location-dot"></i></div>
+                <div class="contact-text">
+                  <p>Endereço</p> 
+                  <p>Rua Dimas Guimarães 792 - Nova Serrana - MG</p>
+                </div>
+              </div>
+              <div class="item-contact">
+                <div><i class="fa-solid fa-phone"></i></div>
+                <div class="contact-text">
+                  <p>Telefone</p> 
+                  <p>(37)3226-1703 / (37)99111-4672</p>
+                </div>
+              </div>
+              <div class="item-contact">
+                <div><i class="fa-solid fa-envelope"></i></div>
+                <div class="contact-text">
+                  <p>E-mail</p> 
+                  <p>contato@nsclean.com.br</p>
+                </div>
+              </div>
+              <div class="item-contact">
+                <div><i class="fa-solid fa-envelope"></i></div>
+                <div class="contact-text">
+                  <p>Atendimento</p> 
+                  <p>Segunda a Sexta / 9:00 ás 18:00</p>
+                </div>
+              </div>
+             
             </div>
           </div>
         </section>
