--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </title>
   </head>
   <body>
-    <header>
+    <header id="home">
       <div class="headerFixed">
         <div class="btnHamburguer">
           <i class="fa-solid fa-bars"></i>
@@ -74,7 +74,7 @@
                 <strong>Higienização</strong> e <strong>Lavanderia</strong>
               </div>
               <div class="contactHeader">
-                <div class="contact"><button>Contato</button></div>
+                <div class="contact"><button><a href="https://wa.me/+5537991114672" target="_blank">Contato</a></button></div>
                 <div class="videoheader">
                   <div class="modal-video">
                     <span class="btnVideo"
@@ -252,7 +252,7 @@
                 ></iframe>
               </div>
               <div class="contact">
-                <button class="btnHistory">Entre em contato</button>
+                <button class="btnHistory"><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Entre em contato</a></button>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
                 <p><strong>Higienização</strong> Completa para Seu Carro</p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -298,7 +298,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -315,7 +315,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -331,7 +331,7 @@
                 <p>Limpeza Impecável e Frescor Duradouro</p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -347,7 +347,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -364,7 +364,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -381,7 +381,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -398,7 +398,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button>Orçamento</button>
+                <button><a href="https://wa.me/+5537991114672" target="_blank">Orçamento</a></button>
               </div>
             </div>
           </div>
@@ -644,7 +644,8 @@
                 <div><i class="fa-solid fa-phone"></i></div>
                 <div class="contact-text">
                   <p>Telefone</p> 
-                  <p>(37)3226-1703 / (37)99111-4672</p>
+                  <p>(37)3226-1703 / <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">(37)99111-4672<i class="fa-brands fa-whatsapp"></i>
+                  </a></p>
                 </div>
               </div>
               <div class="item-contact">
@@ -655,7 +656,7 @@
                 </div>
               </div>
               <div class="item-contact">
-                <div><i class="fa-solid fa-envelope"></i></div>
+                <div><i class="fa-solid fa-clock"></i></i></div>
                 <div class="contact-text">
                   <p>Atendimento</p> 
                   <p>Segunda a Sexta / 9:00 ás 18:00</p>
@@ -667,5 +668,39 @@
         </section>
       </div>
     </main>
+    <footer>
+      <div class="container">
+          <div class="footer-container">
+            <div class="foo-col1">
+              <div class="foo-title">
+                 <h4>Ns Clean</h4>
+              </div>
+              <div class="foo-text">
+                <p>Na <strong>Ns Clean</strong>, cuidamos do seu ambiente e de suas roupas com excelência. Oferecemos serviços especializados em <strong>higienização de estofados</strong>, <strong>limpeza de tapetes</strong>, cortinas, e soluções completas de <strong>lavanderia</strong> para empresas e residências. Nossa missão é proporcionar qualidade, conforto e bem-estar através de um atendimento diferenciado e personalizado. Conte com a<strong> Ns Clean</strong> para um serviço de confiança e resultados impecáveis!</p>
+              </div>
+              <div class="foo-social">
+                <ul>
+                  <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                  <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                  <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="foo-col2">
+              <div class="foo-title">
+                <h4 class="pqn">Links</h4>
+              </div>
+              <div class="foo-linksnavigation">
+                <ul>
+                  <li><a href="#home">Home</a></li>
+                  <li><a href="#services">Serviços</a></li>
+                  <li><a href="#testemunhas">Cliente</a></li>
+                  <li><a href="#contact">Contato</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+      </div>
+    </footer>
   </body>
 </html>
