--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <strong>Higienização</strong> e <strong>Lavanderia</strong>
               </div>
               <div class="contactHeader">
-                <div class="contact"><button><a href="https://wa.me/+5537991114672" target="_blank">Contato</a></button></div>
+                <div class="contact"><button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Contato</a></button></div>
                 <div class="videoheader">
                   <div class="modal-video">
                     <span class="btnVideo"
@@ -252,7 +252,7 @@
                 ></iframe>
               </div>
               <div class="contact">
-                <button class="btnHistory"><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Entre em contato</a></button>
+                <button class="btnHistory"><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Entre em contato</a></button>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
                 <p><strong>Higienização</strong> Completa para Seu Carro</p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -298,7 +298,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -315,7 +315,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -331,7 +331,7 @@
                 <p>Limpeza Impecável e Frescor Duradouro</p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -347,7 +347,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -364,7 +364,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -381,7 +381,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
             <div class="card--item">
@@ -398,7 +398,7 @@
                 </p>
               </div>
               <div class="card--button">
-                <button><a href="https://wa.me/+5537991114672" target="_blank">Orçamento</a></button>
+                <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
           </div>
@@ -644,7 +644,7 @@
                 <div><i class="fa-solid fa-phone"></i></div>
                 <div class="contact-text">
                   <p>Telefone</p> 
-                  <p>(37)3226-1703 / <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!" target="_blank">(37)99111-4672<i class="fa-brands fa-whatsapp"></i>
+                  <p>(37)3226-1703 / <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">(37)99111-4672<i class="fa-brands fa-whatsapp"></i>
                   </a></p>
                 </div>
               </div>
